--- a/indexmain.html
+++ b/indexmain.html
@@ -297,7 +297,7 @@
                             <button class="btn apply">Müraciət et</button>
                         </div>
                         <div class="kredit-right">
-                            <img src="./img/group-6-copy-2@2x.png" class="img-fluid" alt="">
+                            <img src="./img/2447.png" class="img-fluid" alt="">
                         </div>
                     </div>
 
