--- a/indexmain2.html
+++ b/indexmain2.html
@@ -80,7 +80,7 @@
             <div class="navigation py-2">
                 <nav class="navbar navbar-container navbar-expand-lg navbar-dark " id="mainNav">
 
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="./index.html">
                         <svg xmlns="http://www.w3.org/2000/svg" width="169" height="29" viewBox="0 0 217 38">
                             <g fill="none" fill-rule="evenodd">
                                 <g fill="#000">
@@ -109,9 +109,10 @@
                                     Az
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                    <a class="dropdown-item" href="#">Something else here</a>
+                                    <a class="dropdown-item" href="./index.html">V -1</a>
+                                    <a class="dropdown-item" href="./indexmain2.html">V -2</a>
+                                    <a class="dropdown-item" href="./indexmain3.html">V-3</a>
+                                 
                                 </div>
                             </div>
                             <li class="nav-item mx-4 telephone">
