--- a/indexmain3.html
+++ b/indexmain3.html
@@ -255,17 +255,17 @@
                 </div>
 
                 <div class="col-md-9">
-                    <div class="kredit d-flex justify-content-center ">
-                        <div class="kredit-left ">
-                            <h5 class="faiz">15,5% başlayan faizlərlə</h5>
-                            <h2 class="my-4 b-kredit">Hər kəs üçün istehlak və mikro-biznes kreditləri</h2>
+                    <div class="kredit kredit-v3 d-flex justify-content-center ">
+                        <div class="kredit-left kredit-left-v3">
+                            <h5 class="faiz faiz-v3">15,5% başlayan faizlərlə</h5>
+                            <h2 class="my-4 b-kredit b-kredit-v3">Hər kəs üçün istehlak və mikro-biznes kreditləri</h2>
                             <button class="btn apply">Müraciət et</button>
                         </div>
                  
                     </div>
                   
 
-                    <svg class="xx" xmlns="http://www.w3.org/2000/svg" width="130" height="130" viewBox="0 0 88 63">
+                    <svg class="xx xx-v3" xmlns="http://www.w3.org/2000/svg" width="130" height="130" viewBox="0 0 88 63">
                         <g fill="none" fill-opacity=".205" fill-rule="evenodd">
                             <g fill="rgba(255, 255, 255, 0.19)">
                                 <g>
@@ -405,7 +405,7 @@
                     </div>
 
 
-                    <svg class="yy" xmlns="http://www.w3.org/2000/svg" width="130" height="110" viewBox="0 0 88 63">
+                    <svg class="yy yy-v3" xmlns="http://www.w3.org/2000/svg" width="130" height="110" viewBox="0 0 88 63">
                         <g fill="none" fill-opacity=".205" fill-rule="evenodd">
                             <g fill="rgba(255, 255, 255, 0.19)">
                                 <g>
