--- a/indexmain3.html
+++ b/indexmain3.html
@@ -278,7 +278,7 @@
                             </g>
                         </g>
                     </svg>
-                    <div class="main-services main-services-bg pl-5  " id="main-service">
+                    <div class="main-services  main-services-bg pl-5 v-3" id="main-service">
                         <div class="header d-flex align-items-center justify-content-between ">
                             <div class="header-left d-flex align-items-center ">
                                 <div class="circle-active "></div>
