--- a/indexmain3.html
+++ b/indexmain3.html
@@ -266,7 +266,7 @@
                   
 
                     <svg class="xx xx-v3" xmlns="http://www.w3.org/2000/svg" width="130" height="130" viewBox="0 0 88 63">
-                        <g fill="none" fill-opacity=".205" fill-rule="evenodd">
+                        <g fill="none" fill-opacity="1" fill-rule="evenodd">
                             <g fill="rgba(255, 255, 255, 0.19)">
                                 <g>
                                     <path style="backdrop-filter: blur(22px);
@@ -406,7 +406,7 @@
 
 
                     <svg class="yy yy-v3" xmlns="http://www.w3.org/2000/svg" width="130" height="110" viewBox="0 0 88 63">
-                        <g fill="none" fill-opacity=".205" fill-rule="evenodd">
+                        <g fill="none" fill-opacity="1" fill-rule="evenodd">
                             <g fill="rgba(255, 255, 255, 0.19)">
                                 <g>
                                     <path
