--- a/indexmain3.html
+++ b/indexmain3.html
@@ -77,7 +77,7 @@
                                  
                                 </div>
                             </div>
-                            <li class="nav-item mx-4 telephone">
+                            <li class="nav-item mx-4 telephone d-flex justify-content-center align-items-center">
 
                                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36">
                                     <g fill="none" fill-rule="evenodd" opacity="1">
@@ -90,7 +90,7 @@
                                         </g>
                                     </g>
                                 </svg>
-                                *1414
+                                <p class="ml-2 my-auto"> *1414</p>
                             </li>
                             <li class="nav-item mr-4 cabinet d-flex justify-content-center align-items-center">
                                 <a class="nav-link" href="portfolio.html">Şəxsi kabinet</a>
