--- a/indexmain3.html
+++ b/indexmain3.html
@@ -64,7 +64,7 @@
                         </svg></a>
                  
                
-                        <ul class="navbar-nav text-uppercase ml-auto d-flex justifyc-content-center align-items-center">
+                        <ul class="navbar-nav text-uppercase ml-auto d-flex justify-content-center align-items-center">
                             <div class="dropdown">
                                 <a class="btn  dropdown-toggle" type="button" id="dropdownMenuButton"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
